<resources>
    <string name="app_name">Photo Boost</string>
    <string name="home_slogan">Make your selfie photos more fun &amp; more cute</string>
    <string name="text_photo_editor">Photo Editor</string>
    <string name="text_collage">Collage</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_photo_frames">Photo Frames</string>
    <string name="text_tattoo">Tattoo</string>
    <string name="text_share">Share</string>
    <string name="text_set_wallpaper">Set Wallpaper</string>
    <string name="key_save_first_open_app"><![CDATA[key_save_first_open_app\">key_save_first_open_app]]></string>
    <string name="text_theme">Theme</string>
    <string name="text_save">Save</string>
    <string name="music_video_maker">Music Video Maker</string>
    <string name="choose_music">Choose Music</string>
    <string name="text_name_song">Chúng ta không thuộc về nhau</string>
    <string name="text_add">Add</string>
    <string name="text_time">01:35</string>
    <string name="action_settings">Settings</string>
    <string name="text_video_maker">Video Maker</string>
    <string name="text_video_editor">Video Editor</string>
    <string name="text_video_trimmer">Video Trimmer</string>
    <string name="text_video_joinner">Video Joinner</string>
    <string name="text_video_to_mp3">Video to Mp3</string>
    <string name="text_my_videos">My Videos</string>
    <string name="choose_photo">Image</string>
    <string name="text_please_choose_photo">Please choose some photos</string>
    <string name="text_start">Start</string>
    <string name="text_number">[%d / 60]</string>
    <string name="text_folder">Folder Image</string>
    <string name="msg_check_internet_connection">Please connect network</string>
    <string name="btn_close">Đóng</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_ok">OK</string>
    <string name="popup_title">Thông báo</string>
    <string name="text_volume">Volume</string>
    <string name="text_music">Music</string>
    <string name="text_alignment">Text alignment</string>
    <string name="text_size">Text size</string>
    <string name="text_style">Text style</string>
    <string name="text_shadow">Text shadow</string>
    <string name="text_editor_text">Please select text</string>
    <string name="text_editor_sticker">Sticker</string>
    <string name="text_editor_filter">Filter</string>
    <string name="text_export_success">Your video is exported successfully</string>
    <string name="text_save_to">(save to: %s)</string>
    <string name="text_share_now">Share Now</string>
    <string name="text_rate_app">Rate Us</string>
    <string name="text_more_app">More Apps</string>
    <string name="text_save_and_share">Save &amp; Share</string>
    <string name="text_selct_video">Select Video</string>
    <string name="text_number_video">(%s)</string>
    <string name="text_choose_video_mode">Choose video mode</string>
    <string name="text_480p">480p</string>
    <string name="text_720p_HD">720p HD</string>
    <string name="text_number_video_join">[%d / 10]</string>
    <string name="text_music_video_maker">music video maker</string>
    <string name="text_error_show_video">Some function is not support your devices. Please press OK button, we\'ll make it again!</string>
    <string name="text_ok">OK</string>
    <string name="text_loading">just a few moment..</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_again">again</string>
    <string name="text_select_music">Select Music</string>
    <string name="select_video">Select Video</string>
    <string name="text_please_choose_some_video">please choose some video</string>
    <string name="text_trim_video">Trim Video</string>
    <string name="sticker">sticker</string>
    <string name="tools">Tools</string>
    <string name="change_photo">Change Photo</string>
    <string name="effect">Effect</string>
    <string name="confirm_back">This photo is not saved, you want to save it before closing?</string>
    <string name="discard">DISCARD</string>
    <string name="save">SAVE</string>
    <string name="filter">Filter</string>
    <string name="blur">Blur</string>
    <string name="crop">crop</string>
    <string name="sample">Sample</string>
    <string name="radius">Radius</string>
    <string name="default_text">Your text here</string>
    <string name="open_panel">Open Panel</string>
    <string name="change_text">Change Text</string>
    <string name="result">Photo saved in: %s</string>
    <string name="my_gallery">Gallery</string>
    <string-array name="list_features">
        <item>sticker</item>
        <item>adjust</item>
        <item>effect</item>
        <item>filter</item>
        <item>blur</item>
        <item>text</item>
        <item>crop</item>
    </string-array>
    <string-array name="list_tools">
        <item>Flip H</item>
        <item>Flip V</item>
        <item>Zoom In</item>
        <item>Zoom Out</item>
        <item>Rotate</item>
    </string-array>
    <array name="array_text_category">
        <item>Font</item>
        <item>Color</item>
        <item>Setting</item>
    </array>
    <array name="array_font">
        <item>default</item>
        <item>icielpanton-light</item>
        <item>Chunkfive</item>
        <item>GreatVibes-Regular</item>
        <item>Quicksand-Bold</item>
        <item>Quicksand-BoldItalic</item>
        <item>Quicksand-Italic</item>
        <item>Quicksand-Light</item>
        <item>Quicksand-LightItalic</item>
        <item>Quicksand-Regular</item>
        <item>Quicksand_Dash</item>
    </array>
    <string-array name="array_color">
        <item>#000000</item>
        <item>#FFC0CB</item>
        <item>#FF0000</item>
        <item>#008080</item>
        <item>#0000FF</item>
        <item>#EEEEEE</item>
        <item>#FF7373</item>
        <item>#40E0D0</item>
        <item>#00FFFF</item>
        <item>#FFD700</item>
        <item>#CCCCCC</item>
        <item>#C0C0C0</item>
        <item>#333333</item>
        <item>#B0E0E6</item>
        <item>#468499</item>
        <item>#D3FFCE</item>
        <item>#666666</item>
        <item>#FFA500</item>
        <item>#00FF00</item>
        <item>#660066</item>
        <item>#003366</item>
        <item>#800080</item>
        <item>#F6546A</item>
        <item>#FFFF00</item>
        <item>#088DA5</item>
        <item>#20B2AA</item>
        <item>#F0F8FF</item>
        <item>#7FFFD4</item>
        <item>#FFE4E1</item>
    </string-array>
</resources>
