<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@color/color_orange">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="cursive"
            android:textSize="38sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:layout_marginTop="@dimen/dip30"/>
        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/color_white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:paddingTop="@dimen/dip10"
            android:text="@string/home_slogan"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scaleType="fitXY"
        android:src="@drawable/home_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="@color/color_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/border_top_bottom">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_right"
                android:id="@+id/btn_linearPhotoEditor"
                android:clickable="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/dip10"
                    android:paddingBottom="@dimen/dip10"
                    android:src="@drawable/magic_wand"
                    android:clickable="false"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_photo_editor"
                    android:clickable="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/btn_linearCollage"
                android:clickable="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/dip10"
                    android:paddingBottom="@dimen/dip10"
                    android:src="@drawable/collage"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_collage"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_right"
                android:id="@+id/btn_linearGallery"
                android:clickable="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/dip10"
                    android:paddingBottom="@dimen/dip10"
                    android:src="@drawable/gallery"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_gallery"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_right"
                android:id="@+id/btn_linearPhotoFrames"
                android:clickable="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/dip10"
                    android:paddingBottom="@dimen/dip10"
                    android:src="@drawable/photo_frames"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_photo_frames"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/btn_linearTattoo"
                android:clickable="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/dip10"
                    android:paddingBottom="@dimen/dip10"
                    android:src="@drawable/tattoo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_tattoo"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>